--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <style>
       body {
         margin: 0;
+        overflow: hidden;
         font-family: Arial, sans-serif;
         background: #000;
         color: #fff;
