--- a/index.html
+++ b/index.html
@@ -7,29 +7,8 @@
     <style>
       body {
         margin: 0;
+        padding: 0;
         overflow: hidden;
-        font-family: Arial, sans-serif;
-        background: #000;
-        color: #fff;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-      }
-      .lb-preloader {
-        text-align: center;
-      }
-      .lb-preloader__progress {
-        margin-bottom: 20px;
-        font-size: 24px;
-      }
-      .lb-preloader__prompt {
-        background: #fff;
-        color: #000;
-        border: none;
-        padding: 10px 20px;
-        font-size: 18px;
-        cursor: pointer;
       }
     </style>
   </head>
